metadata/objects/graxcampaignmemberindex__x.object
<CustomObject>
    <description>graxcampaignmemberindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxcampaignmemberindex</externalName>
    <fields>
        <fullName>CampaignId__c</fullName>
        <description>CampaignId</description>
        <externalDeveloperName>CampaignId</externalDeveloperName>
        <label>CampaignId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignId_grax_xf_campaign__c</fullName>
        <description>CampaignId_grax_xf_campaign</description>
        <externalDeveloperName>CampaignId_grax_xf_campaign</externalDeveloperName>
        <label>CampaignId_grax_xf_campaign</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyOrAccount__c</fullName>
        <description>CompanyOrAccount</description>
        <externalDeveloperName>CompanyOrAccount</externalDeveloperName>
        <label>CompanyOrAccount</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>ContactId</description>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>ContactId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId_grax_xf_contact__c</fullName>
        <description>ContactId_grax_xf_contact</description>
        <externalDeveloperName>ContactId_grax_xf_contact</externalDeveloperName>
        <label>ContactId_grax_xf_contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_grax_xf_user__c</fullName>
        <description>CreatedById_grax_xf_user</description>
        <externalDeveloperName>CreatedById_grax_xf_user</externalDeveloperName>
        <label>CreatedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DoNotCall</description>
        <externalDeveloperName>DoNotCall</externalDeveloperName>
        <label>DoNotCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Fax</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>FirstName</description>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>FirstName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstRespondedDate__c</fullName>
        <description>FirstRespondedDate</description>
        <externalDeveloperName>FirstRespondedDate</externalDeveloperName>
        <label>FirstRespondedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GRAXCompanyName__c</fullName>
        <description>GRAXCompanyName</description>
        <externalDeveloperName>GRAXCompanyName</externalDeveloperName>
        <label>GRAXCompanyName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Key__c</fullName>
        <description>GRAX_Execution_Unique_Key</description>
        <externalDeveloperName>GRAX_Execution_Unique_Key</externalDeveloperName>
        <label>GRAX_Execution_Unique_Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Keys__c</fullName>
        <description>GRAX_Execution_Unique_Keys</description>
        <externalDeveloperName>GRAX_Execution_Unique_Keys</externalDeveloperName>
        <label>GRAX_Execution_Unique_Keys</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Version__c</fullName>
        <description>GRAX_Version</description>
        <externalDeveloperName>GRAX_Version</externalDeveloperName>
        <label>GRAX_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HasOptedOutOfEmail</description>
        <externalDeveloperName>HasOptedOutOfEmail</externalDeveloperName>
        <label>HasOptedOutOfEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HasOptedOutOfFax</description>
        <externalDeveloperName>HasOptedOutOfFax</externalDeveloperName>
        <label>HasOptedOutOfFax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasResponded__c</fullName>
        <description>HasResponded</description>
        <externalDeveloperName>HasResponded</externalDeveloperName>
        <label>HasResponded</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsDeleted</description>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <description>LastModifiedById</description>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>LastModifiedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_grax_xf_user__c</fullName>
        <description>LastModifiedById_grax_xf_user</description>
        <externalDeveloperName>LastModifiedById_grax_xf_user</externalDeveloperName>
        <label>LastModifiedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>LastName</description>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>LastName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadId__c</fullName>
        <description>LeadId</description>
        <externalDeveloperName>LeadId</externalDeveloperName>
        <label>LeadId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadId_grax_xf_lead__c</fullName>
        <description>LeadId_grax_xf_lead</description>
        <externalDeveloperName>LeadId_grax_xf_lead</externalDeveloperName>
        <label>LeadId_grax_xf_lead</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOrContactId__c</fullName>
        <description>LeadOrContactId</description>
        <externalDeveloperName>LeadOrContactId</externalDeveloperName>
        <label>LeadOrContactId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOrContactId_grax_xf_LeadOrContactId__c</fullName>
        <description>LeadOrContactId_grax_xf_LeadOrContactId</description>
        <externalDeveloperName>LeadOrContactId_grax_xf_LeadOrContactId</externalDeveloperName>
        <label>LeadOrContactId_grax_xf_LeadOrContactId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOrContactOwnerId__c</fullName>
        <description>LeadOrContactOwnerId</description>
        <externalDeveloperName>LeadOrContactOwnerId</externalDeveloperName>
        <label>LeadOrContactOwnerId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOrContactOwnerId_grax_xf_LeadOrConta__c</fullName>
        <description>LeadOrContactOwnerId_grax_xf_LeadOrContactOwnerId</description>
        <externalDeveloperName>LeadOrContactOwnerId_grax_xf_LeadOrContactOwnerId</externalDeveloperName>
        <label>LeadOrContactOwnerId_grax_xf_LeadOrConta</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <description>LeadSource</description>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>LeadSource</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <description>MobilePhone</description>
        <externalDeveloperName>MobilePhone</externalDeveloperName>
        <label>MobilePhone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Phone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>PostalCode</description>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>PostalCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>Salutation</description>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <externalDeveloperName>State</externalDeveloperName>
        <label>State</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street</description>
        <externalDeveloperName>Street</externalDeveloperName>
        <label>Street</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <description>SystemModstamp</description>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title</description>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxModifiedTime__c</fullName>
        <description>graxModifiedTime</description>
        <externalDeveloperName>graxModifiedTime</externalDeveloperName>
        <label>graxModifiedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax_Campaign_Name__c</fullName>
        <description>grax_Campaign_Name</description>
        <externalDeveloperName>grax_Campaign_Name</externalDeveloperName>
        <label>grax_Campaign_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Contact_Name__c</fullName>
        <description>grax_Contact_Name</description>
        <externalDeveloperName>grax_Contact_Name</externalDeveloperName>
        <label>grax_Contact_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CreatedBy_Name__c</fullName>
        <description>grax_CreatedBy_Name</description>
        <externalDeveloperName>grax_CreatedBy_Name</externalDeveloperName>
        <label>grax_CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_LastModifiedBy_Name__c</fullName>
        <description>grax_LastModifiedBy_Name</description>
        <externalDeveloperName>grax_LastModifiedBy_Name</externalDeveloperName>
        <label>grax_LastModifiedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_LeadOrContactId_xf__c</fullName>
        <description>grax_LeadOrContactId_xf</description>
        <externalDeveloperName>grax_LeadOrContactId_xf</externalDeveloperName>
        <label>grax_LeadOrContactId_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_LeadOrContactOwnerId_xf__c</fullName>
        <description>grax_LeadOrContactOwnerId_xf</description>
        <externalDeveloperName>grax_LeadOrContactOwnerId_xf</externalDeveloperName>
        <label>grax_LeadOrContactOwnerId_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Lead_Name__c</fullName>
        <description>grax_Lead_Name</description>
        <externalDeveloperName>grax_Lead_Name</externalDeveloperName>
        <label>grax_Lead_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_campaign_xf__c</fullName>
        <description>grax_campaign_xf</description>
        <externalDeveloperName>grax_campaign_xf</externalDeveloperName>
        <label>grax_campaign_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_campaignid_name__c</fullName>
        <description>grax_campaignid_name</description>
        <externalDeveloperName>grax_campaignid_name</externalDeveloperName>
        <label>grax_campaignid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_campaignmember_name__c</fullName>
        <description>grax_campaignmember_name</description>
        <externalDeveloperName>grax_campaignmember_name</externalDeveloperName>
        <label>grax_campaignmember_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_campaignmember_xf__c</fullName>
        <description>grax_campaignmember_xf</description>
        <externalDeveloperName>grax_campaignmember_xf</externalDeveloperName>
        <label>grax_campaignmember_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_contact_xf__c</fullName>
        <description>grax_contact_xf</description>
        <externalDeveloperName>grax_contact_xf</externalDeveloperName>
        <label>grax_contact_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_contactid_name__c</fullName>
        <description>grax_contactid_name</description>
        <externalDeveloperName>grax_contactid_name</externalDeveloperName>
        <label>grax_contactid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_createdbyid_name__c</fullName>
        <description>grax_createdbyid_name</description>
        <externalDeveloperName>grax_createdbyid_name</externalDeveloperName>
        <label>grax_createdbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_lastmodifiedbyid_name__c</fullName>
        <description>grax_lastmodifiedbyid_name</description>
        <externalDeveloperName>grax_lastmodifiedbyid_name</externalDeveloperName>
        <label>grax_lastmodifiedbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_lead_xf__c</fullName>
        <description>grax_lead_xf</description>
        <externalDeveloperName>grax_lead_xf</externalDeveloperName>
        <label>grax_lead_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_leadid_name__c</fullName>
        <description>grax_leadid_name</description>
        <externalDeveloperName>grax_leadid_name</externalDeveloperName>
        <label>grax_leadid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_leadorcontactid_name__c</fullName>
        <description>grax_leadorcontactid_name</description>
        <externalDeveloperName>grax_leadorcontactid_name</externalDeveloperName>
        <label>grax_leadorcontactid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_leadorcontactownerid_name__c</fullName>
        <description>grax_leadorcontactownerid_name</description>
        <externalDeveloperName>grax_leadorcontactownerid_name</externalDeveloperName>
        <label>grax_leadorcontactownerid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_user_xf__c</fullName>
        <description>grax_user_xf</description>
        <externalDeveloperName>grax_user_xf</externalDeveloperName>
        <label>grax_user_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_xf__c</fullName>
        <description>grax_xf</description>
        <externalDeveloperName>grax_xf</externalDeveloperName>
        <label>grax_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxid__c</fullName>
        <description>graxid</description>
        <externalDeveloperName>graxid</externalDeveloperName>
        <label>graxid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxorgid__c</fullName>
        <description>graxorgid</description>
        <externalDeveloperName>graxorgid</externalDeveloperName>
        <label>graxorgid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>graxcampaignmemberindex</label>
    <pluralLabel>graxcampaignmemberindex</pluralLabel>
</CustomObject>